src/antlr1/ChartParser.py
# Generated from ChartParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChartParser ( Parser ):

    grammarFileName = "ChartParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'with'", "'from'", "'chart:'", "'compare'", 
                     "'differences'", "'contrast'", "'versus'", "'split by'", 
                     "'grouped by'", "'show'", "'stacked by'", "'subgroups'", 
                     "'show correlation between'", "'log'", "'progression of'", 
                     "'trend of'", "'growth of'", "'within'", "'show proportion of'", 
                     "'show share of'", "'show percentage of'", "'show frequency of'", 
                     "'show distribution of'", "'show frequency in'", "'accumulation of'", 
                     "'stacked trend of'", "'scatter plot of'", "'pattern of'", 
                     "'bubble of'", "'buckets'", "'by'", "'and'", "'or'", 
                     "'at'", "'to'", "'for'", "','", "':'", "'('", "')'", 
                     "'while'", "'!'", "'+'", "'-'", "'*'", "'/'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "WITH", "FROM", "CHART", "COMPARE", "DIFFERENCES", 
                      "CONTRAST", "VERSUS", "SPLIT_BY", "GROUPED_BY", "SHOW", 
                      "STACKED_BY", "SUBGROUPS", "CORRELATION", "LOG", "PROGRESSION_OF", 
                      "TREND_OF", "GROWTH_OF", "WITHIN", "SHOW_PROPORTION", 
                      "SHOW_SHARE", "SHOW_PERCENTAGE", "SHOW_FREQUENCY", 
                      "SHOW_DISTRIBUTION", "SHOW_FREQUENCY_BUCKETS", "ACCUMULATION", 
                      "STACKED_TREND", "SCATTER_PLOT", "PATTERN", "BUBBLE", 
                      "BUCKETS", "BY", "AND", "OR", "AT", "TO", "FOR", "COMMA", 
                      "COLON", "LPAREN", "RPAREN", "WHILE", "NOT", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDE", "LT", "LTE", "GT", 
                      "GTE", "EQ", "NEQ", "IDENTIFIER", "WS" ]

    RULE_command = 0
    RULE_chartFunction = 1
    RULE_data = 2
    RULE_table = 3
    RULE_var = 4
    RULE_continuousVar = 5
    RULE_loop = 6
    RULE_range = 7
    RULE_subgroup = 8
    RULE_cases = 9
    RULE_trendKeyword = 10
    RULE_condition = 11
    RULE_logicalOperation = 12
    RULE_operationBody = 13
    RULE_operation = 14
    RULE_operationSign = 15
    RULE_logicalOperationSign = 16

    ruleNames =  [ "command", "chartFunction", "data", "table", "var", "continuousVar", 
                   "loop", "range", "subgroup", "cases", "trendKeyword", 
                   "condition", "logicalOperation", "operationBody", "operation", 
                   "operationSign", "logicalOperationSign" ]

    EOF = Token.EOF
    WITH=1
    FROM=2
    CHART=3
    COMPARE=4
    DIFFERENCES=5
    CONTRAST=6
    VERSUS=7
    SPLIT_BY=8
    GROUPED_BY=9
    SHOW=10
    STACKED_BY=11
    SUBGROUPS=12
    CORRELATION=13
    LOG=14
    PROGRESSION_OF=15
    TREND_OF=16
    GROWTH_OF=17
    WITHIN=18
    SHOW_PROPORTION=19
    SHOW_SHARE=20
    SHOW_PERCENTAGE=21
    SHOW_FREQUENCY=22
    SHOW_DISTRIBUTION=23
    SHOW_FREQUENCY_BUCKETS=24
    ACCUMULATION=25
    STACKED_TREND=26
    SCATTER_PLOT=27
    PATTERN=28
    BUBBLE=29
    BUCKETS=30
    BY=31
    AND=32
    OR=33
    AT=34
    TO=35
    FOR=36
    COMMA=37
    COLON=38
    LPAREN=39
    RPAREN=40
    WHILE=41
    NOT=42
    PLUS=43
    MINUS=44
    MULTIPLY=45
    DIVIDE=46
    LT=47
    LTE=48
    GT=49
    GTE=50
    EQ=51
    NEQ=52
    IDENTIFIER=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(ChartParser.WITH, 0)

        def data(self):
            return self.getTypedRuleContext(ChartParser.DataContext,0)


        def FROM(self):
            return self.getToken(ChartParser.FROM, 0)

        def table(self):
            return self.getTypedRuleContext(ChartParser.TableContext,0)


        def CHART(self):
            return self.getToken(ChartParser.CHART, 0)

        def chartFunction(self):
            return self.getTypedRuleContext(ChartParser.ChartFunctionContext,0)


        def getRuleIndex(self):
            return ChartParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ChartParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ChartParser.WITH)
            self.state = 35
            self.data()
            self.state = 36
            self.match(ChartParser.FROM)
            self.state = 37
            self.table()
            self.state = 38
            self.match(ChartParser.CHART)
            self.state = 39
            self.chartFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChartFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPARE(self):
            return self.getToken(ChartParser.COMPARE, 0)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartParser.VarContext,i)


        def FOR(self):
            return self.getToken(ChartParser.FOR, 0)

        def cases(self):
            return self.getTypedRuleContext(ChartParser.CasesContext,0)


        def DIFFERENCES(self):
            return self.getToken(ChartParser.DIFFERENCES, 0)

        def CONTRAST(self):
            return self.getToken(ChartParser.CONTRAST, 0)

        def VERSUS(self):
            return self.getToken(ChartParser.VERSUS, 0)

        def SPLIT_BY(self):
            return self.getToken(ChartParser.SPLIT_BY, 0)

        def subgroup(self):
            return self.getTypedRuleContext(ChartParser.SubgroupContext,0)


        def GROUPED_BY(self):
            return self.getToken(ChartParser.GROUPED_BY, 0)

        def WITHIN(self):
            return self.getToken(ChartParser.WITHIN, 0)

        def SHOW(self):
            return self.getToken(ChartParser.SHOW, 0)

        def STACKED_BY(self):
            return self.getToken(ChartParser.STACKED_BY, 0)

        def SUBGROUPS(self):
            return self.getToken(ChartParser.SUBGROUPS, 0)

        def CORRELATION(self):
            return self.getToken(ChartParser.CORRELATION, 0)

        def continuousVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartParser.ContinuousVarContext)
            else:
                return self.getTypedRuleContext(ChartParser.ContinuousVarContext,i)


        def AND(self):
            return self.getToken(ChartParser.AND, 0)

        def LOG(self):
            return self.getToken(ChartParser.LOG, 0)

        def trendKeyword(self):
            return self.getTypedRuleContext(ChartParser.TrendKeywordContext,0)


        def FROM(self):
            return self.getToken(ChartParser.FROM, 0)

        def range_(self):
            return self.getTypedRuleContext(ChartParser.RangeContext,0)


        def SHOW_PROPORTION(self):
            return self.getToken(ChartParser.SHOW_PROPORTION, 0)

        def BY(self):
            return self.getToken(ChartParser.BY, 0)

        def SHOW_SHARE(self):
            return self.getToken(ChartParser.SHOW_SHARE, 0)

        def SHOW_PERCENTAGE(self):
            return self.getToken(ChartParser.SHOW_PERCENTAGE, 0)

        def SHOW_FREQUENCY(self):
            return self.getToken(ChartParser.SHOW_FREQUENCY, 0)

        def SHOW_DISTRIBUTION(self):
            return self.getToken(ChartParser.SHOW_DISTRIBUTION, 0)

        def SHOW_FREQUENCY_BUCKETS(self):
            return self.getToken(ChartParser.SHOW_FREQUENCY_BUCKETS, 0)

        def BUCKETS(self):
            return self.getToken(ChartParser.BUCKETS, 0)

        def ACCUMULATION(self):
            return self.getToken(ChartParser.ACCUMULATION, 0)

        def STACKED_TREND(self):
            return self.getToken(ChartParser.STACKED_TREND, 0)

        def SCATTER_PLOT(self):
            return self.getToken(ChartParser.SCATTER_PLOT, 0)

        def PATTERN(self):
            return self.getToken(ChartParser.PATTERN, 0)

        def BUBBLE(self):
            return self.getToken(ChartParser.BUBBLE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.COMMA)
            else:
                return self.getToken(ChartParser.COMMA, i)

        def getRuleIndex(self):
            return ChartParser.RULE_chartFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChartFunction" ):
                listener.enterChartFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChartFunction" ):
                listener.exitChartFunction(self)




    def chartFunction(self):

        localctx = ChartParser.ChartFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_chartFunction)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(ChartParser.COMPARE)
                self.state = 42
                self.var()
                self.state = 43
                self.match(ChartParser.FOR)
                self.state = 44
                self.cases()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(ChartParser.DIFFERENCES)
                self.state = 47
                self.var()
                self.state = 48
                self.match(ChartParser.FOR)
                self.state = 49
                self.cases()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(ChartParser.CONTRAST)
                self.state = 52
                self.var()
                self.state = 53
                self.match(ChartParser.FOR)
                self.state = 54
                self.cases()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.match(ChartParser.VERSUS)
                self.state = 57
                self.var()
                self.state = 58
                self.match(ChartParser.FOR)
                self.state = 59
                self.cases()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.match(ChartParser.COMPARE)
                self.state = 62
                self.var()
                self.state = 63
                self.match(ChartParser.SPLIT_BY)
                self.state = 64
                self.subgroup()
                self.state = 65
                self.match(ChartParser.FOR)
                self.state = 66
                self.cases()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.match(ChartParser.COMPARE)
                self.state = 69
                self.var()
                self.state = 70
                self.match(ChartParser.GROUPED_BY)
                self.state = 71
                self.subgroup()
                self.state = 72
                self.match(ChartParser.FOR)
                self.state = 73
                self.cases()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 75
                self.match(ChartParser.DIFFERENCES)
                self.state = 76
                self.match(ChartParser.WITHIN)
                self.state = 77
                self.subgroup()
                self.state = 78
                self.match(ChartParser.FOR)
                self.state = 79
                self.cases()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 81
                self.match(ChartParser.SHOW)
                self.state = 82
                self.var()
                self.state = 83
                self.match(ChartParser.STACKED_BY)
                self.state = 84
                self.subgroup()
                self.state = 85
                self.match(ChartParser.FOR)
                self.state = 86
                self.cases()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 88
                self.match(ChartParser.SHOW)
                self.state = 89
                self.var()
                self.state = 90
                self.match(ChartParser.SUBGROUPS)
                self.state = 91
                self.subgroup()
                self.state = 92
                self.match(ChartParser.FOR)
                self.state = 93
                self.cases()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.match(ChartParser.CORRELATION)
                self.state = 96
                self.continuousVar()
                self.state = 97
                self.match(ChartParser.AND)
                self.state = 98
                self.continuousVar()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.match(ChartParser.LOG)
                self.state = 101
                self.trendKeyword()
                self.state = 102
                self.continuousVar()
                self.state = 103
                self.match(ChartParser.FROM)
                self.state = 104
                self.range_()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 106
                self.match(ChartParser.SHOW_PROPORTION)
                self.state = 107
                self.var()
                self.state = 108
                self.match(ChartParser.BY)
                self.state = 109
                self.cases()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 111
                self.match(ChartParser.SHOW_SHARE)
                self.state = 112
                self.var()
                self.state = 113
                self.match(ChartParser.BY)
                self.state = 114
                self.cases()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 116
                self.match(ChartParser.SHOW_PERCENTAGE)
                self.state = 117
                self.var()
                self.state = 118
                self.match(ChartParser.BY)
                self.state = 119
                self.cases()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 121
                self.match(ChartParser.SHOW_FREQUENCY)
                self.state = 122
                self.var()
                self.state = 123
                self.match(ChartParser.BY)
                self.state = 124
                self.range_()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 126
                self.match(ChartParser.SHOW_DISTRIBUTION)
                self.state = 127
                self.var()
                self.state = 128
                self.match(ChartParser.BY)
                self.state = 129
                self.range_()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 131
                self.match(ChartParser.SHOW_FREQUENCY_BUCKETS)
                self.state = 132
                self.range_()
                self.state = 133
                self.match(ChartParser.BUCKETS)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 135
                self.match(ChartParser.ACCUMULATION)
                self.state = 136
                self.continuousVar()
                self.state = 137
                self.match(ChartParser.FOR)
                self.state = 138
                self.cases()
                self.state = 139
                self.match(ChartParser.FROM)
                self.state = 140
                self.range_()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 142
                self.match(ChartParser.STACKED_TREND)
                self.state = 143
                self.continuousVar()
                self.state = 144
                self.match(ChartParser.FOR)
                self.state = 145
                self.cases()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 147
                self.match(ChartParser.SCATTER_PLOT)
                self.state = 148
                self.var()
                self.state = 149
                self.match(ChartParser.AND)
                self.state = 150
                self.var()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 152
                self.match(ChartParser.PATTERN)
                self.state = 153
                self.var()
                self.state = 154
                self.match(ChartParser.AND)
                self.state = 155
                self.var()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 157
                self.match(ChartParser.BUBBLE)
                self.state = 158
                self.var()
                self.state = 159
                self.match(ChartParser.COMMA)
                self.state = 160
                self.var()
                self.state = 161
                self.match(ChartParser.COMMA)
                self.state = 162
                self.var()
                self.state = 163
                self.match(ChartParser.FOR)
                self.state = 164
                self.cases()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartParser.VarContext,i)


        def continuousVar(self):
            return self.getTypedRuleContext(ChartParser.ContinuousVarContext,0)


        def AT(self):
            return self.getToken(ChartParser.AT, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)




    def data(self):

        localctx = ChartParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.continuousVar()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.var()
                self.state = 171
                self.match(ChartParser.AT)
                self.state = 172
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = ChartParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(ChartParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = ChartParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(ChartParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuousVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.IDENTIFIER)
            else:
                return self.getToken(ChartParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.COMMA)
            else:
                return self.getToken(ChartParser.COMMA, i)

        def getRuleIndex(self):
            return ChartParser.RULE_continuousVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuousVar" ):
                listener.enterContinuousVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuousVar" ):
                listener.exitContinuousVar(self)




    def continuousVar(self):

        localctx = ChartParser.ContinuousVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_continuousVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(ChartParser.IDENTIFIER)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 181
                self.match(ChartParser.COMMA)
                self.state = 182
                self.match(ChartParser.IDENTIFIER)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ChartParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(ChartParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(ChartParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(ChartParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(ChartParser.COLON, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = ChartParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(ChartParser.WHILE)
            self.state = 189
            self.match(ChartParser.LPAREN)
            self.state = 190
            self.condition()
            self.state = 191
            self.match(ChartParser.RPAREN)
            self.state = 192
            self.match(ChartParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.IDENTIFIER)
            else:
                return self.getToken(ChartParser.IDENTIFIER, i)

        def TO(self):
            return self.getToken(ChartParser.TO, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = ChartParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(ChartParser.IDENTIFIER)
            self.state = 195
            self.match(ChartParser.TO)
            self.state = 196
            self.match(ChartParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubgroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_subgroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubgroup" ):
                listener.enterSubgroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubgroup" ):
                listener.exitSubgroup(self)




    def subgroup(self):

        localctx = ChartParser.SubgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subgroup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(ChartParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_cases

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCases" ):
                listener.enterCases(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCases" ):
                listener.exitCases(self)




    def cases(self):

        localctx = ChartParser.CasesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cases)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(ChartParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrendKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRESSION_OF(self):
            return self.getToken(ChartParser.PROGRESSION_OF, 0)

        def TREND_OF(self):
            return self.getToken(ChartParser.TREND_OF, 0)

        def GROWTH_OF(self):
            return self.getToken(ChartParser.GROWTH_OF, 0)

        def getRuleIndex(self):
            return ChartParser.RULE_trendKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrendKeyword" ):
                listener.enterTrendKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrendKeyword" ):
                listener.exitTrendKeyword(self)




    def trendKeyword(self):

        localctx = ChartParser.TrendKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_trendKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOperation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartParser.LogicalOperationContext)
            else:
                return self.getTypedRuleContext(ChartParser.LogicalOperationContext,i)


        def NOT(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.NOT)
            else:
                return self.getToken(ChartParser.NOT, i)

        def LPAREN(self):
            return self.getToken(ChartParser.LPAREN, 0)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.AND)
            else:
                return self.getToken(ChartParser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ChartParser.OR)
            else:
                return self.getToken(ChartParser.OR, i)

        def getRuleIndex(self):
            return ChartParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = ChartParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 204
                self.match(ChartParser.NOT)


            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 207
                self.match(ChartParser.LPAREN)

